# MyTorch

./: .gitignore  LICENSE  README.md  inference_gpt2.py  pyproject.toml  requirements.txt  setup.py  train_gpt2.py  train_gpt2.sh  visualize_graph.py
gpt2_trainer/: benchmark_inference.py  finetune_gpt2_base_shakespeare.py  finetune_gpt2_base_shakespeare.sh  gpt2.py  inference_gpt2.py  train_gpt2.py  train_gpt2.sh  train_gpt2_launcher.sh
miniddp/: accelerate.py
models/: gpt2.py
models_/: resnet.py
mytorch/: __init__.py  _array.py  accelerate.py  banner.py  cli.py  dtypes.py  ops.py  sampling.py  save_load.py  tensor.py
mytorch/autograd/: function.py  ops.py  ops_registry.py
mytorch/distributed/: launch.py
mytorch/nn/: __init__.py  _deprecated_recursive_functional.py  _deprecated_recursive_modules.py  functional.py  initializations.py  modules.py
mytorch/nn/functional/: __init__.py  _compat.py  _flags.py  utils.py
mytorch/nn/functional/activations/: __init__.py  gelu.py  leaky_relu.py  relu.py  relu_squared.py  sigmoid.py  silu.py  (+2 more)
mytorch/nn/fused_ops/: __init__.py  benchmark.py  conv.py  conv2d.py  cross_entropy.py  embedding.py  flags.py  flash_attention.py  flash_cross_attention.py  layernorm.py  linear.py  matmul.py  softmax.py  utils.py
mytorch/nn/modules/: __init__.py  base_module.py  module_groups.py
mytorch/optim/: __init__.py  lr_scheduler.py  optimizers.py
mytorch/tests/: all_reduce_wo_launch.sh  test_training.py  train_ddp_mnist.py
mytorch/utils/: __init__.py  checkpoint.py  data.py  grad_processor.py
nanochat_trainer/: README.md  run.sh
nanochat_trainer/core/: cache.py  nanochat_gpt.py  pipeline.py  tokenizer.py  tools.py
nanochat_trainer/scripts/: download_fineweb_edu.py  prepare_fineweb.py  pretrain_model.py  sample_text.py  train_tokenizer.py
prepare_data/: prepare_owt.py  prepare_owt.sh  prepare_shakespeare.py  prepare_shakespeare.sh  prepare_shakespeare_gpt2.py
run_scripts/: train_conv_cifar10_classifier.sh  train_tiny_gpt2.sh
tests/: all_reduce_test_w_launch.py  all_reduce_test_wo_launch.py  all_reduce_w_launch.sh  run_ddp_mnist.sh
training_scripts/: train_conv1d_mnist_autoencoder.py  train_conv2d_cifar10_classifier.py  train_conv2d_mnist_autoencoder.py  train_linear_mnist_classifier.py  train_resnet_classifier.py
(+69 files in other folders)
